<resources>
    <string name="app_name">Spending Tracking App</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="hello">Hello</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="your_name">Your Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="spending">Spending</string>
    <string name="bill">Bill</string>
    <string name="rent">Rent</string>
    <string name="add">Add</string>
    <string name="tl">TL</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="sterlin">Sterlin</string>
    <string name="add_spending">Add Spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>