<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpendingActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_spending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/spending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:checkedButton="@+id/bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2">

        <RadioButton
            android:id="@+id/bill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bill" />

        <RadioButton
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rent" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/other" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/currencyRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:checkedButton="@+id/tl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tl"
            android:layout_marginRight="16dp"/>

        <RadioButton
            android:id="@+id/dolar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dollar"
            android:layout_marginRight="16dp"/>

        <RadioButton
            android:id="@+id/euro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/euro"
            android:layout_marginRight="16dp"/>

        <RadioButton
            android:id="@+id/sterlin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sterlin"
            />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/custom_rose"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyRadioGroup" />



</androidx.constraintlayout.widget.ConstraintLayout>