<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/custom_ping">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onBoarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_bg"
        app:layout_constraintBottom_toTopOf="@id/centerButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/skip"
        android:textColor="@color/custom_cerise"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <View
        android:id="@+id/centerButton"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/right_btn"
        app:layout_constraintEnd_toEndOf="@+id/right_btn"
        app:layout_constraintStart_toStartOf="@+id/right_btn"
        app:layout_constraintTop_toTopOf="@+id/right_btn" />

    <ImageView
        android:id="@+id/right_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/icon_bg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/custom_cerise"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>